gcc/testsuite/g++.dg/template/cast4.C
template <class T> void f()
{
  static_cast<int&>(42);	// { dg-error "3:invalid .static_cast." }
}
